fixed bug that made photos too big to fit within grid

--- a/react-app/src/components/FilteredProducts/FilteredProducts.css
+++ b/react-app/src/components/FilteredProducts/FilteredProducts.css
@@ -62,19 +62,19 @@
 
 @media (min-width: 550px) {
     #productCard-holder-AllProducts {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 }
 
 @media (min-width: 850px) {
     #productCard-holder-AllProducts {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(3, minmax(0, 1fr));
     }
 }
 
 @media (min-width: 1000px) {
     #productCard-holder-AllProducts {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(4, minmax(0, 1fr));
     }
 }
 
