--- a/react-app/src/components/ProductCard/styleProductCard.css
+++ b/react-app/src/components/ProductCard/styleProductCard.css
@@ -51,8 +51,8 @@
       font-size: 16px;
       font-weight: 300;
       white-space: nowrap;
-      /* text-overflow: ellipsis;
-      overflow: hidden; */
+      text-overflow: ellipsis;
+      overflow: hidden;
 
 }
 
